--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-aria": "~1.4.5",
     "angular-bootstrap": "~0.13.4",
     "angular-route": "~1.4.5",
+    "animate.css": "~3.4.0",
     "bootstrap-sass": "bootstrap-sass-official#~3.3.5",
     "moment": "~2.10.6"
   }
