Include tracking, missing country names.

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-route": "~1.4.5",
     "animate.css": "~3.4.0",
     "bootstrap-sass": "bootstrap-sass-official#~3.3.5",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "angulartics": "~0.20.1"
   }
 }
