--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "bootstrap-sass": "bootstrap-sass-official#~3.3.5",
     "moment": "~2.10.6",
     "angulartics": "~0.20.1",
-    "ngInfiniteScroll": "~1.2.1"
+    "ngInfiniteScroll": "~1.2.1",
+    "angular-recursion": "~1.0.5"
   }
 }
