--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,10 @@
     "angulartics": "~0.20.1",
     "ngInfiniteScroll": "~1.2.1",
     "angular-recursion": "~1.0.5",
-    "handsontable": "~0.20.0",
+    "handsontable": "0.20.0",
     "ngHandsontable": "~0.7.0"
+  },
+  "resolutions": {
+    "handsontable": "0.20.0"
   }
 }
